--- a/input.css
+++ b/input.css
@@ -34,7 +34,7 @@
 
 @media (max-width: 576px) {
   #hero {
-    background-image: url("../images/desktop/image-hero.jpg");
+    background-image: url("../images/mobile/image-hero.jpg");
     background-position: center;
   }
 }
